# om-apex-mcp

./: DESIGN.md  SECURITY.md  pyproject.toml  render.yaml
.github/: dependabot.yml
.github/workflows/: ci.yml
data/context/: domain_inventory.json  pending_tasks_old.json  technology_decisions.json
docs/: CLI-ACCESS-REFERENCE.md  DB-SCHEMA-QUICK-REF.md  SETUP_SECOND_LAPTOP.md
scripts/: mcp-health-check.py  mcp-health-check.sh
src/om_apex_mcp/: http_server.py  quorum_supabase.py  server.py  storage.py  supabase_client.py
src/om_apex_mcp/tools/: ai_quorum.py  context.py  documents.py  handoff.py  helpers.py  progress.py  tasks.py
