[project]
name = "om-apex-mcp"
version = "0.2.0"
description = "MCP server for Om Apex Holdings - persistent memory across Claude interfaces"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Nishad Tambe", email = "nishad@omapex.com"}
]
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "markdown>=3.5.0",
    "starlette>=0.49.0",
    "uvicorn>=0.34.0",
    "sse-starlette>=2.0.0",
    "google-api-python-client>=2.100.0",
    "google-auth>=2.0.0",
    "supabase>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.27.0",
    "ruff>=0.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/om_apex_mcp"]

[project.scripts]
om-apex-mcp = "om_apex_mcp.server:main"
om-apex-mcp-http = "om_apex_mcp.http_server:main"

[tool.ruff]
line-length = 120
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["om_apex_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
